<?xml version="1.0" encoding="utf-8"?>
<resources>

    <string name="app_name">Login</string>
    <string name="hello_world">Hello world!</string>
    <string name="action_settings">Settings</string>
    <string name="usuario">Usuário</string>
    <string name="senha">Senha</string>
    <string name="email">E-mail</string>
    <string name="validar">Validar</string>
    <string name="nao_validar">Não validar</string>
    <string name="entrar">Entrar</string>
    <string name="usuario_valido">Usuário válido</string>
    <string name="usuario_invalido">Usuário inválido</string>

</resources>
